snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/error-1.13.0-20220822.093702-3-sources.jar.sha256
348f0593bfa9fed3143191cc15814571ac2112c021f9be514d3189d8c99a92a8